@@ -1,10 +1,10 @@
 <!-- Creator     : groff version 1.21 -->
-<!-- CreationDate: Thu Jul 18 08:50:14 2013 -->
+<!-- CreationDate: Sat Oct 21 00:10:05 2017 -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-<meta name="generator" content="Bluefish 2.2.4" >
+<meta name="generator" content="groff -Thtml, see www.gnu.org">
 <meta http-equiv="Content-Type" content="text/html; charset=US-ASCII">
 <meta name="Content-Style" content="text/css">
 <style type="text/css">
@@ -117,14 +117,17 @@ Dilithium can be used to start Crystal from a command line
 or in conjunction with initialization scripts such as Sys V
 init.d scripts. Example initialization scripts are provided.
 On some systems, such as Debian, options for Sys V
-initialization can be set using /etc/default/dilithium
+initialization can be set using a /etc/default/dilithium
 parameter file. A default parameter file is also provided.
 On systems where multiple display managers are installed,
 there are a couple of other optional files that may
 facilitate starting fvwm-crystal:</p>
 
-<p style="margin-left:11%; margin-top: 1em">1.
-/etc/X11/cyrstal-display-manager<br>2. ~/.xinit</p>
+<p style="margin-left:22%; margin-top: 1em"><i>1.
+/etc/X11/cyrstal-display-manager</i></p>
+
+<p style="margin-left:22%; margin-top: 1em"><i>2.
+~/.xinit</i></p>
 
 <p style="margin-left:11%; margin-top: 1em">The first file,
 crystal-display-manager, only needs to contain
@@ -159,30 +162,30 @@ switch between the Graphical display terminals in this
 example using CTRL-ALT-F? and you see a login prompt, which
 is running on one of the virtual terminals then you
 don&rsquo;t need to add the CTRL key. If you see a login
-prompt then you only need use the ALT-F key combination to
-switch between the terminals, for example ALT-F2 will switch
-to virtual terminal 2. From the virtual terminal screen use
-ALT-F7 or ALT-F8 (depending on how many virtual terminals
-are configured, to switch back to the Graphical
+prompt then you only need to use the ALT-F key combination
+to switch between the terminals, for example ALT-F2 will
+switch to virtual terminal 2. From the virtual terminal
+screen use ALT-F7 or ALT-F8 (depending on how many virtual
+terminals are configured, to switch back to the Graphical
 terminals).</p>
 
 <p style="margin-left:11%; margin-top: 1em">Switch back to
-the display and desktop with the terminal window type
-&quot;sudo dilithium&quot; was enter and &quot;select&quot;
-the window by clicking on window, then use the
-&quot;CTRL-C&quot; key combination to cancel or kills the
-second X server and display manager. If all else fails,
-select re-start or re-boot from either manager to restore
-the system back to normal. This is just an example to
-demonstrate running two separate display managers
-simultaneously. A more realistic application would be to
-start gdm3 for run level 2 or 3 and use dilithium to start
-fvwm-crystal for a different run-level.</p>
+the display and desktop with the terminal window where
+&quot;sudo dilithium&quot; was entered and
+&quot;select&quot; the window by clicking any where on
+window, then use the &quot;CTRL-C&quot; key combination to
+cancel or kills the second X server and display manager. If
+all else fails, select re-start or re-boot from either
+manager to restore the system back to normal. This is just
+an example to demonstrate running two separate display
+managers simultaneously. A more realistic application would
+be to start gdm3 for run level 2 or 3 and use dilithium to
+start fvwm-crystal for a different run-level.</p>
 
 <p style="margin-left:11%; margin-top: 1em">Note that
 Dilithium does not check command line arguments, for example
 if &quot;--client /usr/bin/grapes --cargs purple&quot; is
-specified then this will passed to xinit.</p>
+specified then this will be passed to xinit.</p>
 
 <h2>PARAMETERS
 <a name="PARAMETERS"></a>
@@ -231,8 +234,8 @@ available /tmp/.X?-lock file, where ? is a number from 0 to
 <p style="margin-left:11%;">-U, --user</p>
 
 <p style="margin-left:22%;">Specify the user name to
-establish environments settings and authority. The default
-is the current value of the USER environment variable.</p>
+establish environment settings and authority. The default is
+the current value of the USER environment variable.</p>
 
 <h2>INFORMATION
 <a name="INFORMATION"></a>
@@ -287,7 +290,7 @@ daemon even without the --daemon parameter.</p>
 <p style="margin-left:11%;">--no-drop</p>
 
 <p style="margin-left:22%;">Do not drop privileges.
-Normally during Sys V initialization daemon programs are
+Normally during Sys V initialization daemons programs are
 started with higher then normal privileges. For security
 purposes, dilithium forfeits these privileges. Use this
 option to allow dilithium to retain system privileges.</p>
@@ -310,16 +313,16 @@ use syslog.0);</p>
 
 <p style="margin-left:11%;">--logfile &lt;filespec&gt;</p>
 
-<p style="margin-left:22%;">Specify the name log file The
+<p style="margin-left:22%;">Specify the log file name. The
 default is &quot;/var/log/dilithium.log&quot;. Unlike most
-logs, dilithium log is not accumulative, the file is
+logs, the dilithium log is not accumulative, the file is
 overwritten each time dilithium is invoked. Information from
 previous invocation can be obtain from the system log.</p>
 
 <p style="margin-left:11%;">-d, --debug</p>
 
 <p style="margin-left:22%;">Configures all the settings and
-prints debug information, including the command-line like
+prints debug information, including the command-line
 statement with parameters.</p>
 
 <h2>HOMEPAGE
