@@ -1,3 +1,5 @@
 2017-10-21 Wiley E. Hill <wileyhill@gmail.com>
 
     * docs/dilithium.dox: Specify WARN_LOGFILE = ../dilithium-doxygen.log.
+
+    * docs/dilithium.1.in: Update phrasing and minor formatting.
